--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,7 +2,7 @@ name: Publish
 
 on:
   push:
-    tags: [ v* ]
+    tags: [v*]
 
 env:
   DOTNET_VERSION: 3.1.x
@@ -11,26 +11,26 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-      with:
-        submodules: true
+      - uses: actions/checkout@v2
+        with:
+          submodules: true
 
-    - name: Use .NET Core ${{ env.DOTNET_VERSION }}
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: ${{ env.DOTNET_VERSION }}
+      - name: Use .NET Core ${{ env.DOTNET_VERSION }}
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: ${{ env.DOTNET_VERSION }}
 
-    - name: Setup Version
-      id: setup_version
-      run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\/v/}
+      - name: Setup Version
+        id: setup_version
+        run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\/v/}
 
-    - name: Publish Functions
-      run: dotnet publish -c Release -r win-x86 --self-contained false -o ./dist -p:Version=${{ steps.setup_version.outputs.VERSION }} KeyVault.Acmebot
+      - name: Publish Functions
+        run: dotnet publish -c Release -r win-x86 --self-contained false -o ./dist -p:Version=${{ steps.setup_version.outputs.VERSION }} ContainerApp.Acmebot
 
-    - name: Zip Functions
-      run: 7z a -mx=9 latest.zip ./dist/*
+      - name: Zip Functions
+        run: 7z a -mx=9 latest.zip ./dist/*
 
-    - name: Upload to Blob
-      run: az storage blob upload -f latest.zip -c azure-keyvault-letsencrypt -n v3/latest.zip
-      env:
-        AZURE_STORAGE_CONNECTION_STRING: ${{ secrets.AZURE_STORAGE_CONNECTION_STRING }}
+      - name: Upload to Blob
+        run: az storage blob upload -f latest.zip -c azure-keyvault-letsencrypt -n v3/latest.zip
+        env:
+          AZURE_STORAGE_CONNECTION_STRING: ${{ secrets.AZURE_STORAGE_CONNECTION_STRING }}
